--- a/css/footer.css
+++ b/css/footer.css
@@ -24,10 +24,10 @@
 }
 
 .footer__logo img {
-    width: 143px;
+    width: 100%;
+    min-width: 113px;
+    max-width: 143px;
     height: auto;
-    min-width: 100%;
-    min-height: 100%;
 }
 
 .footer__links-list {
@@ -96,10 +96,7 @@
     .footer__logo {
         justify-content: center;
         flex: 1;
-    }
-
-    .footer__logo img {
-        width: 113px;
+        padding-left: 5px;
     }
 
     .footer__links {
