--- a/css/global.css
+++ b/css/global.css
@@ -22,7 +22,8 @@
      --description-color: #848484;
      --rentals-description-color: #bdbdbd;
      --fields-background-color: #f5f5f5;
-     --form_outline-color: #3b99fc
+     --form_outline-color: #3b99fc;
+     --description-alternative-color: #ffffff;
      --title-font-family: 'Circular Std', serif;
      --description-font-family: 'Roboto', sans-serif;
      font-family: 'Circular Std', serif;
