--- a/partials/offer-main.html
+++ b/partials/offer-main.html
@@ -7,9 +7,9 @@
                 <h3><span class="house-ofer-price">$65</span> /a night</h3>
                 <p>River Chalet</p>
                 <ul class="house-ofer-rooms">
-                    <li>1 Bedroom</li>
-                    <li>1 Bathroom</li>
-                    <li>2 Sleeps</li>
+                    <li class="house-ofer-rooms-li">1 Bedroom</li>
+                    <li class="house-ofer-rooms-li">1 Bathroom</li>
+                    <li class="house-ofer-rooms-li">2 Sleeps</li>
                 </ul>
                 <div class="house-ofer-comfort">
                     <p>Jetted Tub</p>
@@ -28,9 +28,9 @@
                 <h3><span class="house-ofer-price">$75</span> /a night</h3>
                 <p>Lookout Lodge</p>
                 <ul class="house-ofer-rooms">
-                    <li>2 Bedrooms</li>
-                    <li>1 Bathroom</li>
-                    <li>4 Sleeps</li>
+                    <li class="house-ofer-rooms-li">2 Bedrooms</li>
+                    <li class="house-ofer-rooms-li">1 Bathroom</li>
+                    <li class="house-ofer-rooms-li">4 Sleeps</li>
                 </ul>
                 <div class="house-ofer-comfort">
                     <p>Hot Tub</p>
@@ -49,9 +49,9 @@
                 <h3><span class="house-ofer-price">$85</span> /a night</h3>
                 <p>Lookout Lodge</p>
                 <ul class="house-ofer-rooms">
-                    <li>2 Bedrooms</li>
-                    <li>2 Bathroom</li>
-                    <li>6 Sleeps</li>
+                    <li class="house-ofer-rooms-li">2 Bedrooms</li>
+                    <li class="house-ofer-rooms-li">2 Bathroom</li>
+                    <li class="house-ofer-rooms-li">6 Sleeps</li>
                 </ul>
                 <div class="house-ofer-comfort">
                     <p>Whirlpool Tub</p>
@@ -70,9 +70,9 @@
                 <h3><span class="house-ofer-price">$100</span> /a night</h3>
                 <p>Lookout Lodge</p>
                 <ul class="house-ofer-rooms">
-                    <li>3 Bedrooms</li>
-                    <li>2 Bathroom</li>
-                    <li>8 Sleeps</li>
+                    <li class="house-ofer-rooms-li">3 Bedrooms</li>
+                    <li class="house-ofer-rooms-li">2 Bathroom</li>
+                    <li class="house-ofer-rooms-li">8 Sleeps</li>
                 </ul>
                 <div class="house-ofer-comfort">
                     <p>Whirlpool Tub</p>
@@ -91,9 +91,9 @@
                 <h3><span class="house-ofer-price">$150</span> /a night</h3>
                 <p>Lookout Lodge</p>
                 <ul class="house-ofer-rooms">
-                    <li>3 Bedrooms</li>
-                    <li>3 Bathroom</li>
-                    <li>10 Sleeps</li>
+                    <li class="house-ofer-rooms-li">3 Bedrooms</li>
+                    <li class="house-ofer-rooms-li">3 Bathroom</li>
+                    <li class="house-ofer-rooms-li">10 Sleeps</li>
                 </ul>
                 <div class="house-ofer-comfort">
                     <p>Private Indoor Pool</p>
