--- a/css/call-form.css
+++ b/css/call-form.css
@@ -1,10 +1,10 @@
-@import url(global.css);
-
 .call-order {
     min-width: 320px;
     width: 100%;
     min-height: 469px;
     background-image: url(../img/call-form-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
     padding: 90px 24px;
 }
@@ -49,7 +49,10 @@
 
 .call-order__input:first-child {
     margin-bottom: 24px;
+}
 
+.call-order__input:focus {
+    outline-color: var(--form_outline-color);
 }
 
 .call-order__btn {
