--- a/css/global.css
+++ b/css/global.css
@@ -29,9 +29,10 @@
      font-family: 'Circular Std', serif;
      scroll-behavior: smooth;
  }
- .body {
-    max-width: 1024px;
-    margin: auto;
+
+ .container {
+     max-width: 1200px;
+     margin: auto;
  }
 
  img {
