Added container class to footer.html

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer container">
     <div class="footer__main">
         <div class="footer__logo">
             <a href="index.html">
