Changed size images in Things to Do chapter

--- a/partials/index.things-to-do.partial.html
+++ b/partials/index.things-to-do.partial.html
@@ -4,7 +4,7 @@
         <div class="things-to-do__cards cards">
             <article class="cards__item">
                 <div class="cards__item-image-container">
-                    <img class="cards__image" src="img/girl-on-horse.jpeg" alt="Girl on horse">
+                    <img class="cards__image" src="img/girl-on-horse.jpg" alt="Girl on horse">
                 </div>
                 <h3 class="cards__heading">Horse Riding</h3>
                 <h4 class="cards__subheading">$4/hour</h4>
@@ -13,7 +13,7 @@
             </article>
             <article class="cards__item">
                 <div class="cards__item-image-container">
-                    <img class="cards__image" src="img/rock-climbing.jpeg" alt="Rock climbing">
+                    <img class="cards__image" src="img/rock-climbing.jpg" alt="Rock climbing">
                 </div>
                 <h3 class="cards__heading">Rock Climbing</h3>
                 <h4 class="cards__subheading">$2/hour</h4>
@@ -23,7 +23,7 @@
             </article>
             <article class="cards__item">
                 <div class="cards__item-image-container">
-                    <img class="cards__image" src="img/biking.jpeg" alt="Biking">
+                    <img class="cards__image" src="img/biking.jpg" alt="Biking">
                 </div>
                 <h3 class="cards__heading">Biking</h3>
                 <h4 class="cards__subheading">$1/hour</h4>
@@ -33,7 +33,7 @@
             </article>
             <article class="cards__item">
                 <div class="cards__item-image-container">
-                    <img class="cards__image" src="img/rafting.jpeg" alt="Rafting">
+                    <img class="cards__image" src="img/rafting.jpg" alt="Rafting">
                 </div>
                 <h3 class="cards__heading">Rafting</h3>
                 <h4 class="cards__subheading">$3/hour</h4>
@@ -43,7 +43,7 @@
             </article>
             <article class="cards__item">
                 <div class="cards__item-image-container">
-                    <img class="cards__image" src="img/fishing.jpeg" alt="Fishing">
+                    <img class="cards__image" src="img/fishing.jpg" alt="Fishing">
                 </div>
                 <h3 class="cards__heading">Fishing</h3>
                 <h4 class="cards__subheading">$2/hour</h4>
@@ -52,7 +52,7 @@
             </article>
             <article class="cards__item">
                 <div class="cards__item-image-container">
-                    <img class="cards__image" src="img/wellness.jpeg" alt="Spas and Wellness">
+                    <img class="cards__image" src="img/wellness.jpg" alt="Spas and Wellness">
                 </div>
                 <h3 class="cards__heading">Spas and Wellness</h3>
                 <h4 class="cards__subheading">$2/hour</h4>
