Added container class

--- a/partials/index.adventure.partial.html
+++ b/partials/index.adventure.partial.html
@@ -1,5 +1,5 @@
 <section class="adventure">
-    <div class="adventure__title-and-subtitle">
+    <div class="adventure__title-and-subtitle container">
         <h2 class="adventure__title">Your Adventure Starts Here</h2>
         <p class="adventure__subtitle">Welcome to a perfect escape in Yosemite Mariposa County, California! Yosemite
             National Park is known for its giant sequoias and the observation deck of the Portal View, which overlooks
@@ -8,7 +8,7 @@
             find your place in Yosemite!
         </p>
     </div>
-    <div class="adventure__cards-container">
+    <div class="adventure__cards-container container">
         <div class="adventure__horse-ranch">
             <img src="img/horse-ranch-cottage.jpeg" alt="Horse ranch cottage">
             <h3>Yosemite Gateway Horse Ranch "Getaway" Cottage</h3>
