--- a/partials/index.things-to-do.partial.html
+++ b/partials/index.things-to-do.partial.html
@@ -1,7 +1,7 @@
 <section class="things-to-do">
     <div class="things-to-do__inner">
         <h2 class="things-to-do__title">Things to Do</h2>
-        <div class="things-to-do__cards cards">
+        <div class="things-to-do__cards cards container">
             <article class="cards__item">
                 <div class="cards__item-image-container">
                     <img class="cards__image" src="img/girl-on-horse.jpg" alt="Girl on horse">
