--- a/partials/header.partial.html
+++ b/partials/header.partial.html
@@ -9,7 +9,7 @@
         <span class="burger__line"></span>
       </div>
     </div>
-    <div class="header__nav">
+    <div class="header__nav container">
       <ul class="header__menu">
         <li class="header__menu-item">
           <a href="about.html" class="header__menu-link">About</a>
