--- a/partials/index.things-to-do.partial.html
+++ b/partials/index.things-to-do.partial.html
@@ -18,8 +18,7 @@
                 <h3 class="cards__heading">Rock Climbing</h3>
                 <h4 class="cards__subheading">$2/hour</h4>
                 <p class="cards__description">Whether you are a professional mountaineer or it’s your first time,
-                    Yosemite
-                    one of the best places for this kind of sport.</p>
+                    Yosemite one of the best places for this kind of sport.</p>
             </article>
             <article class="cards__item">
                 <div class="cards__item-image-container">
@@ -28,8 +27,7 @@
                 <h3 class="cards__heading">Biking</h3>
                 <h4 class="cards__subheading">$1/hour</h4>
                 <p class="cards__description">Rent a bike and take a fun and easy two-wheel tour over Yosemite Valley.
-                    It
-                    usually takes 2 hours.</p>
+                    It usually takes 2 hours.</p>
             </article>
             <article class="cards__item">
                 <div class="cards__item-image-container">
@@ -38,8 +36,7 @@
                 <h3 class="cards__heading">Rafting</h3>
                 <h4 class="cards__subheading">$3/hour</h4>
                 <p class="cards__description">You have a perfect choice to combine your river rafting adventure with a
-                    visit
-                    to the park. Test our waters.</p>
+                    visit to the park. Test our waters.</p>
             </article>
             <article class="cards__item">
                 <div class="cards__item-image-container">
@@ -57,8 +54,7 @@
                 <h3 class="cards__heading">Spas and Wellness</h3>
                 <h4 class="cards__subheading">$2/hour</h4>
                 <p class="cards__description">After a long exhausting day, you can relax and pamper yourself in our
-                    unique
-                    spa and wellness center.</p>
+                    unique spa and wellness center.</p>
             </article>
         </div>
     </div>
