--- a/css/index.adventure.css
+++ b/css/index.adventure.css
@@ -1,7 +1,9 @@
 .adventure {
     padding: 80px 24px;
     background-image: url(../img/background-img-adventure.jpeg);
+    background-repeat: no-repeat;
     background-size: cover;
+    
 }
 
 .adventure__title-and-subtitle {
