--- a/css/gallery-main-seasons.css
+++ b/css/gallery-main-seasons.css
@@ -1,9 +1,12 @@
 .container {
-  margin: auto;
   max-width: 720px;
-  overflow-x: hidden;
 }
-.gallery_img,
+
+.gallery_img {
+  height: 250px;
+  object-fit: cover;
+}
+
 .block_summer,
 .block_winter,
 .block_spring,
@@ -15,55 +18,46 @@
   margin-top: 35px;
   margin-bottom: 54px;
 }
+
 .gallery-picture_of_places_in_different_seasons {
   background: url("../img/gallery_seasons_background.jpg");
   background-size: cover;
   padding: 2rem;
 }
-.gallery-picture_title { 
+
+.gallery-picture_title {
   text-align: center;
   padding: 30px;
   font-size: 24px;
   color: var(--text-color);
   font-family: var(--title-font-family);
-
 }
-.gallery-picture_seasons >div {
+
+.gallery-picture_seasons>div {
   display: none;
   border-top: 1px solid var(--background-color);
   padding: 10px 15px;
 }
+
 .gallery-picture_seasons>input[type="radio"] {
   display: none;
 }
-.gallery-picture_seasons >input[type="radio"]:checked+label {
+
+.gallery-picture_seasons>input[type="radio"]:checked+label {
   font-weight: bold;
   cursor: default;
 }
-#summer-btn:checked ~ #summer,
-#winter-btn:checked ~ #winter,
-#spring-btn:checked ~ #spring,
-#autumn-btn:checked ~ #autumn,
-#fishing-btn:checked ~ #fishing,
-#spa-btn:checked ~ #spa
-{
+
+#summer-btn:checked~#summer,
+#winter-btn:checked~#winter,
+#spring-btn:checked~#spring,
+#autumn-btn:checked~#autumn,
+#fishing-btn:checked~#fishing,
+#spa-btn:checked~#spa {
   display: block;
-} 
-.gallery-picture_seasons >label {
-  display: flex;
-  align-items: center;
-  vertical-align: middle;
-  user-select: none;
-  padding: 2px 6px;
-  font-size: 18px;
-  line-height: 1.5;
-  transition: color 0.15s ease-in-out;
-  margin-left: 6px;
-  cursor: pointer;
-  margin-bottom: 4px;
-  flex-direction: column;
 }
-.gallery-picture_seasons >label:first-of-type {
+
+.gallery-picture_seasons>label:first-of-type {
   margin-left: 0;
 }
 
@@ -71,20 +65,30 @@
   .container {
     margin: auto;
     max-width: 1100px;
-    display: block;    
+    display: block;
     overflow-x: hidden;
   }
-  .gallery-picture_title { 
+/* добавив */
+  .gallery_img {
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .gallery-picture_title {
     text-align: center;
     padding: 30px;
     font-size: 44px;
     color: var(--text-color);
     font-family: var(--title-font-family);
   }
+
   .gallery-picture_seasons {
     text-align: center;
   }
-  .gallery-picture_seasons > label {
+
+  .gallery-picture_seasons>label {
     display: inline-block;
     text-align: center;
     padding: 2px 8px;
@@ -93,33 +97,32 @@
     transition: color 0.15s ease-in-out;
     cursor: pointer;
   }
-  #summer-btn:checked ~ #summer,
-  #winter-btn:checked ~ #winter,
-  #spring-btn:checked ~ #spring,
-  #autumn-btn:checked ~ #autumn,
-  #fishing-btn:checked ~ #fishing,
-  #spa-btn:checked ~ #spa
-  {
+
+  #summer-btn:checked~#summer,
+  #winter-btn:checked~#winter,
+  #spring-btn:checked~#spring,
+  #autumn-btn:checked~#autumn,
+  #fishing-btn:checked~#fishing,
+  #spa-btn:checked~#spa {
     display: grid;
   }
-  .gallery-picture_seasons .container {
-    width: 60%;
-    margin: 2rem auto; 
-  }
+
   .block_summer,
   .block_winter {
-    grid-template-columns: repeat(12, 1fr) auto auto;
-    grid-template-rows:  repeat(12, 5vw) auto auto;
+    grid-template-columns: repeat(12, 1fr)  ;
+    grid-template-rows: repeat(12, 5vw) ;
     grid-gap: 1.5rem;
   }
+
   .block_spring,
   .block_autumn,
   .block_fishing,
   .block_spa {
-    grid-template-columns: repeat(12, 1fr) auto auto;
-    grid-template-rows:  repeat(6, 5vw) auto auto;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(6, 5vw);
     grid-gap: 1.5rem;
   }
+
   .picture-summer_house-on-the-mountain,
   .winter-mountains {
     grid-column-start: 1;
@@ -127,66 +130,74 @@
     grid-row-start: 1;
     grid-row-end: 7;
   }
-.picture-summer_horse,
-.picture-winter_skier {
-  grid-column-start: 9;
-  grid-column-end: 13;
-  grid-row-start: 1;
-  grid-row-end: 4;
-}
-.picture-summer_lake,
-.picture-winter_girl-with-coffee {
-  grid-column-start: 9;
-  grid-column-end: 13;
-  grid-row-start: 4;
-  grid-row-end: 7;
-}
-.picture-summer_house-interior,
-.picture-winter_house-by-the-lake {
-  grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 7;
-  grid-row-end: 10;
-}
-.picture-summer_house-in-the-forest,
-.picture-winter_horse {
-  grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 10;
-  grid-row-end: 13;
-}
-.picture-summer_house-with-flowers,
-.picture-winter_houses-in-the-mountains {
-  grid-column-start: 5;
-  grid-column-end: 13;
-  grid-row-start: 7;
-  grid-row-end: 13;
-}
-.picture-spring_house-on-the-mountain,
-.picture-autumn_gray-house,
-.picture-fishing_fisherman,
-.picture-spa_window {
-  grid-column-start: 1;
-  grid-column-end: 9;
-  grid-row-start: 1;
-  grid-row-end: 7;
-}
-.picture-spring_house-near-the-lake,
-.picture-autumn_house-in-the-forest,
-.picture-fishing_wooden-boat,
-.picture-spa_bath {
-  grid-column-start: 9;
-  grid-column-end: 13;
-  grid-row-start: 1;
-  grid-row-end: 4;
-}
-.picture-spring_hous-in-the-forest,
-.picture-autumn_girl-near-the-house,
-.picture-fishing_red-boat,
-.picture-spa_terrace {
-  grid-column-start: 9;
-  grid-column-end: 13;
-  grid-row-start: 4;
-  grid-row-end: 7;
-}
+
+  .picture-summer_horse,
+  .picture-winter_skier {
+    grid-column-start: 9;
+    grid-column-end: 13;
+    grid-row-start: 1;
+    grid-row-end: 4;
+  }
+
+  .picture-summer_lake,
+  .picture-winter_girl-with-coffee {
+    grid-column-start: 9;
+    grid-column-end: 13;
+    grid-row-start: 4;
+    grid-row-end: 7;
+  }
+
+  .picture-summer_house-interior,
+  .picture-winter_house-by-the-lake {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 7;
+    grid-row-end: 10;
+  }
+
+  .picture-summer_house-in-the-forest,
+  .picture-winter_horse {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 10;
+    grid-row-end: 13;
+  }
+
+  .picture-summer_house-with-flowers,
+  .picture-winter_houses-in-the-mountains {
+    grid-column-start: 5;
+    grid-column-end: 13;
+    grid-row-start: 7;
+    grid-row-end: 13;
+  }
+
+  .picture-spring_house-on-the-mountain,
+  .picture-autumn_gray-house,
+  .picture-fishing_fisherman,
+  .picture-spa_window {
+    grid-column-start: 1;
+    grid-column-end: 9;
+    grid-row-start: 1;
+    grid-row-end: 7;
+  }
+
+  .picture-spring_house-near-the-lake,
+  .picture-autumn_house-in-the-forest,
+  .picture-fishing_wooden-boat,
+  .picture-spa_bath {
+    grid-column-start: 9;
+    grid-column-end: 13;
+    grid-row-start: 1;
+    grid-row-end: 4;
+  }
+
+  .picture-spring_hous-in-the-forest,
+  .picture-autumn_girl-near-the-house,
+  .picture-fishing_red-boat,
+  .picture-spa_terrace {
+    grid-column-start: 9;
+    grid-column-end: 13;
+    grid-row-start: 4;
+    grid-row-end: 7;
+  }
 }
