--- a/partials/header.partial.html
+++ b/partials/header.partial.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <div class="header__container">
+  <div class="header__container container">
     <div class="header__top">
       <a href="index.html" class="header__logo"><img src="img/yosemite-vacation-logo.png"
           alt="Yosemite vacation logo" /></a>
@@ -9,7 +9,7 @@
         <span class="burger__line"></span>
       </div>
     </div>
-    <div class="header__nav container">
+    <div class="header__nav">
       <ul class="header__menu">
         <li class="header__menu-item">
           <a href="about.html" class="header__menu-link">About</a>
