--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,4 @@
 .header {
-    min-width: 320px;
     width: 100%;
 }
 
@@ -34,10 +33,32 @@
     background-color: var(--text-color);
 }
 
+.header__nav.active .burger__line:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+}
+
+.header__nav.active .burger__line:nth-child(2) {
+    opacity: 0;
+}
+
+.header__nav.active .burger__line:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+}
+
 .header__nav {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: -100%;
     display: flex;
     flex-direction: column;
     text-align: center;
+    transition: 0.3s;
+    background-color: var(--fields-background-color);
+}
+
+.header__nav.active {
+    left: 0;
 }
 
 .header__menu {
@@ -82,8 +103,13 @@
 }
 
 @media (min-width: 990px) {
-    header {
+    .header {
         padding: 30px 40px;
+    }
+
+    .header__container {
+        margin-left: 50px;
+        margin-right: 50px;
     }
 
     .header__burger {
@@ -93,6 +119,10 @@
     .header__logo {
         display: block;
         margin: 0 auto;
+    }
+
+    .header__nav {
+        left: 0;
     }
 
     .header__menu {
@@ -108,6 +138,8 @@
     .header__info {
         flex-direction: row;
         justify-content: space-between;
+        margin-left: 40px;
+        margin-right: 40px;
     }
 
     .header__location {
