fixed some bugs

--- a/partials/header.partial.html
+++ b/partials/header.partial.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <div class="header__container container">
+  <div class="header__container ">
     <div class="header__top">
       <a href="index.html" class="header__logo"><img src="img/yosemite-vacation-logo.png"
           alt="Yosemite vacation logo" /></a>
