--- a/css/header.css
+++ b/css/header.css
@@ -54,7 +54,7 @@
     flex-direction: column;
     text-align: center;
     transition: 0.3s;
-    background-color: var(--fields-background-color);
+    background-color: var(--background-color);
 }
 
 .header__nav.active {
@@ -108,8 +108,12 @@
     }
 
     .header__container {
-        margin-left: 50px;
-        margin-right: 50px;
+        margin: 0;
+        
+    }
+
+    .header__top {
+        width: 100%;
     }
 
     .header__burger {
@@ -123,6 +127,7 @@
 
     .header__nav {
         left: 0;
+        position: relative;
     }
 
     .header__menu {
@@ -138,8 +143,7 @@
     .header__info {
         flex-direction: row;
         justify-content: space-between;
-        margin-left: 40px;
-        margin-right: 40px;
+        
     }
 
     .header__location {
