--- a/css/index.adventure.css
+++ b/css/index.adventure.css
@@ -7,6 +7,14 @@
 
 }
 
+@media (max-width: 992px) {
+    .adventure {
+        background-size: cover;
+        background-size: 100%;
+        background-position: top ;
+    }
+}
+
 .adventure__title-and-subtitle {
     display: grid;
     gap: 24px;
