--- a/css/index.adventure.css
+++ b/css/index.adventure.css
@@ -7,11 +7,13 @@
 
 }
 
-@media (max-width: 992px) {
+
+@media (min-width: 320px) {
     .adventure {
         background-size: cover;
         background-size: 100%;
         background-position: top ;
+
     }
 }
 
