--- a/partials/gallery-main-our-guests.html
+++ b/partials/gallery-main-our-guests.html
@@ -1,7 +1,7 @@
 <section>
     <div class="gallery_carousel">
         <h2 class="gallery_carousel-tags">Our guests </h2>
-        <div class="gallery_sl" data-slider="gallery_sl" data-loop="true" data-autoplay="false">
+        <div class="gallery_sl" data-slider="gallery_sl" data-loop="true" data-autoplay="true">
             <div class="gallery_sl-wrapper">
                 <div class="gallery_sl-items">
                     <div class="gallery_sl-item">
@@ -21,9 +21,6 @@
                     </div>
                     <div class="gallery_sl-item">
                         <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-7.jpeg" alt="Working">
-                    </div>
-                    <div class="gallery_sl-item">
-                        <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-1.jpeg" alt="Working">
                     </div>
                 </div>
             </div>
