--- a/partials/index-form.html
+++ b/partials/index-form.html
@@ -2,21 +2,22 @@
     <section class="reservation">
         <h2 class="reservation-title">Make a reservation</h2>
         <p class="reservation-description">Please complete the form below</p>
-        <form action="" method="" class="reservation-form">
-            <input type="text" placeholder="Name" class="reservation-input">
-            <input type="text" placeholder="Phone number" class="reservation-input">
-            <input type="text" placeholder="Check in date" class="reservation-input">
-            <input type="text" placeholder="Check out date" class="reservation-input">
-            <select name="Number of guests" aria-placeholder="Number of guests" class="reservation-select">
+        <form id="index-form-formspree" action="https://formspree.io/f/xqkveanv" method="POST" class="reservation-form">
+            <input type="text" name="name" placeholder="Name" class="reservation-input">
+            <input type="text" name="phone-number" placeholder="Phone number" class="reservation-input">
+            <input type="text" name="check-in-date" placeholder="Check in date" class="reservation-input">
+            <input type="text" name="check-out-date" placeholder="Check out date" class="reservation-input">            
+            <select name="Number-of-guests" aria-placeholder="Number of guests" class="reservation-select">
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
-                <option>4</option>
+                <option>4</option> 
                 <option>5</option>
                 <option>5+</option>
             </select>
             <input type="submit" placeholder="Make a reservation" class="reservation-submit">
         </form>
+        <div id="index-form-status"></div>
     </section>
     
 </div>
