header  + my js

--- a/partials/gallery-main-our-guests.html
+++ b/partials/gallery-main-our-guests.html
@@ -1,31 +1,11 @@
-<section>
-    <div class="gallery_carousel">
-        <h2 class="gallery_carousel-tags">Our guests </h2>
-        <div class="gallery_sl" data-slider="gallery_sl" data-loop="true" data-autoplay="true">
-            <div class="gallery_sl-wrapper">
-                <div class="gallery_sl-items">
-                    <div class="gallery_sl-item">
-                        <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-1.jpeg" alt="Working">
-                    </div>
-                    <div class="gallery_sl-item">
-                        <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-2.jpeg" alt="Working">
-                    </div>
-                    <div class="gallery_sl-item">
-                        <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-3.jpeg" alt="Working">
-                    </div>
-                    <div class="gallery_sl-item">
-                        <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-4.jpeg" alt="Working">
-                    </div>
-                    <div class="gallery_sl-item">
-                        <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-6.jpeg" alt="Working">
-                    </div>
-                    <div class="gallery_sl-item">
-                        <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-7.jpeg" alt="Working">
-                    </div>
-                </div>
+<section class="gallery_carousel">
+    <h2 class="gallery_carousel-tags">Our guests </h2>
+    <div class="gallery_sl" data-slider="gallery_sl" data-loop="true" data-autoplay="true">
+        <div class="gallery_sl-wrapper">
+            <div class="gallery_sl-items">
             </div>
-            <button class="gallery_sl-btn gallery_sl-btn-prev"></button>
-            <button class="gallery_sl-btn gallery_sl-btn-next"></button>
         </div>
+        <button class="gallery_sl-btn gallery_sl-btn-prev"></button>
+        <button class="gallery_sl-btn gallery_sl-btn-next"></button>
     </div>
 </section>
