--- a/partials/our-facilities.partial.html
+++ b/partials/our-facilities.partial.html
@@ -1,7 +1,7 @@
 <section>
     <h2>Our Facilities</h2>
     <span class="w-text-content"></span>
-    
+    <div class="w-picture-wrapper media-wrapper_3VN"></div>   
 </section>
 
 
