adding classes to a block

--- a/partials/our-facilities.partial.html
+++ b/partials/our-facilities.partial.html
@@ -1,7 +1,8 @@
 <section>
     <h2>Our Facilities</h2>
     <span class="w-text-content"></span>
-    <div class="w-picture-wrapper media-wrapper_3VN"></div>   
+    <div class="w-picture-wrapper media-wrapper_3VN"></div> 
+    <img src="img/nature.jpg" alt="description of nature for recreation" classes "w-picture-wrapper media-wrapper_3VN"> 
 </section>
 
 
