--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
  * {
@@ -19,7 +19,7 @@
      --form_outline-color: #3b99fc;
      --description-alternative-color: #ffffff;     
      --description-font-family: 'Roboto', sans-serif;
-     font-family: 'Rubik', serif;
+     font-family: 'Montserrat', serif;
      scroll-behavior: smooth;
  }
 
