--- a/css/form.css
+++ b/css/form.css
@@ -62,7 +62,7 @@
 .reservation-description{
     margin-top: 30px;
     margin-bottom: 30px;
-    font-family: --description-font-family;
+    font-family: var(--description-font-family);
 }
 @media (max-width:412px) {
     .reservation-input, .reservation-select, .reservation-submit{
