--- a/css/global.css
+++ b/css/global.css
@@ -19,6 +19,7 @@
      --form_outline-color: #3b99fc;
      --description-alternative-color: #ffffff;     
      --description-font-family: 'Roboto', sans-serif;
+     --title-font-family: 'Poppins', serif;
      font-family: 'Poppins', serif;
      scroll-behavior: smooth;
  }
@@ -46,6 +47,10 @@
      font-family: var(--title-font-family);
      font-weight: normal;
  }
+
+ input {
+    font-family: var(--description-font-family);    
+}
 
  p {
      max-width: 644px;
