--- a/partials/contact-form.html
+++ b/partials/contact-form.html
@@ -22,7 +22,7 @@
             </div>
         </div>
     </div>
-    <form class="contacts_us__form" action="" method="get">
+    <form id ="contacts_us__form" class="contacts_us__form" action="http://localhost:3000/save_form_data" method="post">
         <div class="contacts_us__form-box ">
             <div class="contacts_us__form-windows ">
                 <label class="contacts_us__form-label" for="contact-name"></label>
@@ -34,9 +34,28 @@
                 <input class="contacts_us__form-tel" type="tel" pattern="[0-9]{1,9}" name="contact-pnumber"
                     id="contact-pnumber" placeholder="Phone number*" required>
             </div>
-            <div class="contacts_us__form-button ">
-                <input class="contacts_us__form-input-button" type="submit" value="SEND">
+            <div   class="contacts_us__form-button ">
+                <input  id="submit-form" class="contacts_us__form-input-button" type="submit" value="SEND">
             </div>
         </div>
     </form>
+    <!-- <script>
+        const form = document.getElementById('contacts_us__form');
+        form.addEventListener('submit', function (event) {
+            event.preventDefault(); // Забороняємо стандартну поведінку форми (перезавантаження сторінки)
+    
+            const formData = new FormData(form);
+            fetch('/save_form_data', {
+                method: 'POST',
+                body: formData
+            })
+            .then(response => response.text())
+            .then(message => {
+                console.log(message);
+            })
+            .catch(error => console.error('Помилка відправки AJAX-запиту:', error));
+        });
+    </script> -->
+    
+    </body>
 </section>
