Added about.variety-of-cabins.css file

--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,5 @@
 @import url(global.css);
 @import url(header.css); 
+@import url(about.variety-of-cabins.css);
 @import url(about.season-activities.css);
 @import url(footer.css);
