--- a/css/gallery-main-carousel.css
+++ b/css/gallery-main-carousel.css
@@ -96,7 +96,7 @@
   position: absolute;
   top: 10px;
   right: 20px;
-  color: #fff;
+  color: white;
   font-style: italic;
   font-size: 32px;
   font-weight: bold;
